<resources>
    <string name="app_name">TrainApp</string>
    
    <string name="module_rfid">高频模块</string>
    <string name="module_gps">GPS模块</string>
    <string name="module_camera">摄像头模块</string>
    <string name="module_obd">OBD模块</string>
    <string name="module_network">网络模块</string>
    <string name="btn_ensure">确定</string>
    <string name="retry">重新加载</string>
    <string name="refresh">刷新</string>
    <string name="back">返回</string>
    <string name="title_wifi_setting">Wifi设置</string>
    <string name="title_selfcheck">开机自检</string>
    <string name="title_project_select">项目选择</string>
    <string name="title_car_setting">车辆信息</string>
    <string name="input_password">请输入密码</string>
    <string name="welcome">欢迎使用驾培系统</string>
    <string name="welcome_en">Welcome to Driver Training System</string>
    <string name="parameter_car_info">车辆信息</string>
    <string name="parameter_verify_type">身份验证</string>
    <string name="parameter_train_info">培训参数</string>
    <string name="parameter_sys_info">系统参数</string>
    <string name="factory_reset">恢复出厂设置</string>
    <string name="logout">注销</string>
    <string name="picture_interval">拍照时间间隔</string>
    <string name="over_speed_value">超速阈值</string>
    <string name="max_hour_per_day">单日最高学时限制</string>
    <string name="is_open_geofence">是否启用围栏</string>
    <string name="is_open_obd">OBD</string>
    <string name="coach_car_validate">教练员准教车型验证</string>
    <string name="domain">域名: </string>
    <string name="port">端口: </string>
    <string name="text_stu_name">学员姓名</string>
    <string name="text_coach_name">教练姓名</string>
    <string name="no_content">暂无</string>
    <string name="text_identification">身份证号</string>
    <string name="coach_login">教练签到</string>
    <string name="student_login">学员签到</string>
    <string name="coach_logout">教练签退</string>
    <string name="student_logout">学员签退</string>
    <string name="text_car_num">车牌号码</string>
    <string name="text_longitude">经度</string>
    <string name="text_time_passed">累计时长</string>
    <string name="text_train_part">培训部分</string>
    <string name="text_latitude">纬度</string>
    <string name="text_miles_passed">累计训练里程</string>
    <string name="text_current_speed">当前时速</string>
    <string name="text_km_h">km / h</string>
    <string name="text_quit">退出</string>
    <string name="cancel">取消</string>

    <string name="error">系统崩溃</string>
</resources>
