<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#17ffffff"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <ImageView
        android:id="@+id/ivLoginStatus"
        android:src="@drawable/stu_unlogin"
        android:layout_width="162dp"
        android:layout_height="106dp"/>

    <LinearLayout
        android:layout_marginTop="19dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvLoginNameTitle"
            android:paddingRight="5dp"
            android:textColor="@color/gray_text"
            android:textSize="16sp"
            android:text="@string/text_stu_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/no_content"
            android:id="@+id/tvLoginName"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="19dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="36dp">

        <TextView
            android:paddingRight="5dp"
            android:textColor="@color/gray_text"
            android:textSize="16sp"
            android:text="@string/text_identification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/no_content"
            android:id="@+id/tvLoginId"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:gravity="center"
        android:layout_marginTop="13dp"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/white"
        android:text="@string/student_login"
        android:background="@drawable/btn_gardient_yellow"
        android:id="@+id/btnLogin"
        android:layout_width="184dp"
        android:layout_height="50dp"/>

</LinearLayout>